changed ui beta

--- a/psu_flutter/appsettings.json
+++ b/psu_flutter/appsettings.json
@@ -4,6 +4,7 @@
     "MsSqlConnectionString": "Server=10.1.0.22;Database=DW;Uid=dwreader;Pwd=DW_Reader;Connect Timeout=30;"
   },
   "Socket": {
+    "IpAddress": "192.168.4.248",
     "PortAPI": 3444
   }
 
